src/assets/main.css
/* Main Styles */

html {
	font-family: "Ubuntu Sans", sans-serif;
	background-color: var(--black);
	color: #ffffff;
	scroll-behavior: smooth;
	--black: #0c0c0c;
	--primary-color: #f05138;
	--secondary-color: #737373;
	--border: var(--secondary-color) 1px solid;
}

body {
	margin: auto;
	max-width: 1610px;
}

.callToActionButton {
	background-color: var(--black);
	margin: 10px;
	color: #ffffff;
	padding: 10px 20px;
	border-radius: 10px;
	cursor: pointer;
	background-image: radial-gradient(
		circle at 0 0,
		var(--primary-color),
		var(--black) 42%
	);
	box-shadow: 3px 3px 0 -1px var(--black), 3px 3px var(--primary-color);
	border: 1px solid var(--primary-color);
	transition: all 0.2s ease-in-out;
	text-decoration: none;
}

.actionButton {
	background-color: var(--black);
	margin: 10px;
	color: #ffffff;
	padding: 10px 20px;
	border-radius: 10px;
	cursor: pointer;
	box-shadow: 3px 3px 0 -1px var(--black), 3px 3px var(--secondary-color);
	border: 1px solid var(--secondary-color);
	transition: all 0.2s ease-in-out;
	text-decoration: none;
}

.actionButton:hover {
	box-shadow: 2px 2px 0 -1px var(--black), 2px 2px var(--secondary-color);
	transform: translate(1px, 1px);
}

.callToActionButton:hover {
	box-shadow: 2px 2px 0 -1px var(--black), 2px 2px var(--primary-color);
	transform: translate(1px, 1px);
}

.callToActionButton:active,
.actionButton:active {
	box-shadow: none;
	transform: translate(3px, 3px);
}

.primaryColor {
	color: var(--primary-color);
}

.primaryColorUnderline {
	text-decoration: underline var(--primary-color);
}

/* Navigation Styles */

.navBarContainer {
	position: sticky;
	top: 10px; /* Adds the 10px gap above the navbar */
	z-index: 1000;
}

nav {
	display: flex;
	align-items: center;
	margin-inline: auto;
	width: calc(100% - 60px);
	height: fit-content;
	border-radius: 15px;
	padding: 0 20px;
	border: #7a7a7a 1px solid;
	background-color: #1a1a1a8e;
	backdrop-filter: blur(10px) saturate(180%);
}

.navBarItem {
	margin: 10px;
	text-decoration: none;
	color: white;
	transition: all 0.2s ease-in-out;
}

.navBarItem:hover,
.navBarDropdownItem:hover {
	color: #cacaca;
}

.navBarDropdown {
	position: absolute;
	top: 100%;
	right: 0;
	background-color: #1a1a1a8e;
	backdrop-filter: blur(10px) saturate(180%);
	border-radius: 15px;
	padding-inline: 10px;
	padding-bottom: 20px;
	border: var(--border);
	margin-top: 10px;
}

.navBarDropdownItem {
	margin: 0;
	text-decoration: none;
	color: white;
	transition: all 0.2s ease-in-out;
}

.navBarDropdownButton {
	margin: 0;
	width: 143px;
	display: inline-block;
}

.logo {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	margin-top: 5px;
	margin-bottom: 5px;
	margin-right: auto;
	font-weight: bold;
}

.logo img {
	width: 40px;
	height: 40px;
	border-radius: 50%;
	margin-right: 10px;
}

.active p {
	text-decoration: underline var(--primary-color);
}

/*Heading Styles*/

.headingTextBox {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	margin-top: 100px;
}

.headingText {
	font-size: 3rem;
	color: #ffffff;
	margin-bottom: 0;
}

.subHeadingText {
	font-size: 2rem;
	color: var(--primary-color);
	margin: 0;
}

.headingAboutText {
	font-size: large;
	color: #ffffff;
	margin-bottom: 0;
	max-width: calc(100% - 5ch);
}

.headingButtons {
	display: flex;
	flex-direction: row;
}

/* About Me Styles */

.aboutMe {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.aboutMe h2 {
	font-size: 2rem;
	margin-bottom: 0;
}

.aboutMe p {
	font-size: large;
	color: #ffffff;
	margin-bottom: 0;
	margin-inline: 20px;
	max-width: 80ch;
}

/* Projects Styles */

.projects {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.projects h2 {
	font-size: 2rem;
	margin-bottom: 0;
}

/* Certificates Styles */

.certificates {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.certificates h2 {
	font-size: 2rem;
	margin-bottom: 0;
}

/*  Display Item Styles */

.displayItem {
	display: flex;
	flex-direction: row;
	justify-content: left;
	align-items: center;
	margin-bottom: 20px;
	padding: 20px;
	border-bottom: var(--border);
	width: calc(100% - 40px);
}

.displayItem img {
	width: 300px;
	height: 200px;
	margin: 20px;
	object-fit: cover;
	border-radius: 15px;
}

@media (max-width: 990px) {
	.displayItem {
		flex-direction: column;
	}
	.displayItem img {
		width: 80%;
		height: 80%;
	}
}

.displayItemText {
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin-left: 20px;
}

.displayItemText h2 {
	font-size: x-large;
	color: #ffffff;
	margin-bottom: 0;
}

.displayItemText p {
	font-size: large;
	color: #ffffff;
	margin-bottom: 0;
}

.displayItemButtons {
	display: flex;
	margin-left: auto;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.displayItemButton {
	width: 50px;
	text-align: center;
}

/* Notification Box Styles */

.notificationBox {
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background-color: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(10px) saturate(180%);
	display: none;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	z-index: 100;
	border-radius: 15px;
	padding: 10px;
	border: var(--border);
}

.notificationBox p {
	font-size: large;
	color: #ffffff;
	margin: 0;
	max-width: calc(100% - 5ch);
}

.notificationBox button {
	position: fixed;
	top: 10px;
	right: 10px;
	background-color: transparent;
	border: none;
	cursor: pointer;
}

